<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    >
 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.example.lenovo.udacitybusinesscard.MainActivity"
    android:baselineAligned="false">

    <ImageView
        android:id="@+id/logoudacity"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/downloa"
         />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/bb"
        android:paddingLeft="15dp"
        android:textColor="@color/colorPrimaryDark"
         />

     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="13dp"
        android:weightSum="2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_weight="1"
            >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/newgooglefavicon"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/facebook"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            />

        <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/download"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/awslogo"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:weightSum="4"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ooctocat"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/nanotubehd"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/redditlogo"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/nnn"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                />

        </LinearLayout>
    </LinearLayout>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/text"
    android:paddingLeft="16dp"
        android:paddingRight="16dp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Opencourses"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NanogegreeProgram"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/address"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/website"
            android:textSize="16sp"
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>